include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gnome-system-monitor
DOC_ENTITIES = legal.xml
DOC_INCLUDES =
DOC_FIGURES = figures/addColumn.png \
	      figures/changePriority.png \
	      figures/colorPanel.png \
  	      figures/columnContextMenu.png \
	      figures/gnome-system-monitor_window.png \
	      figures/memoryMaps.png \
	      figures/moreInfo.png \
	      figures/processListing.png \
	      figures/sortButton.png \
	      figures/sortMenu2.png \
	      figures/sortMenu.png \
	      figures/systemMonitor.png \
	      figures/viewMenu.png

DOC_LINGUAS = ar bg ca cs da de el es fr oc pa sl sv zh_CN

