@YELP_HELP_RULES@

HELP_ID = gnome-system-monitor

HELP_FILES = \
	commandline.page \
	cpu-check.page \
	cpu-mem-normal.page \
	cpu-multicore.page \
	fs-device.page \
	fs-diskusage.page \
	fs-info.page \
	fs-showall.page \
	index.page \
	legal.xml \
	mem-check.page \
	mem-swap.page \
	memory-map-use.page \
	net-bits.page \
	process-explain.page \
	process-files.page \
	process-identify-file.page \
	process-identify-hog.page \
	process-kill.page \
	process-many.page \
	process-priority-change.page \
	process-status.page \
	process-update-speed.page \
	solaris-mode.page \
	units.page

HELP_MEDIA =

HELP_LINGUAS =
