find_program('itstool', required: true)
gnome.yelp(meson.project_name(),
  sources: [
    'commandline.page',
    'cpu-check.page',
    'cpu-mem-normal.page',
    'cpu-multicore.page',
    'fs-device.page',
    'fs-diskusage.page',
    'fs-info.page',
    'fs-showall.page',
    'index.page',
    'legal.xml',
    'mem-check.page',
    'mem-swap.page',
    'memory-map-use.page',
    'memory-map-what.page',
    'net-bits.page',
    'process-explain.page',
    'process-files.page',
    'process-identify-file.page',
    'process-identify-hog.page',
    'process-kill.page',
    'process-many.page',
    'process-priority-change.page',
    'process-priority-what.page',
    'process-status.page',
    'process-update-speed.page',
    'solaris-mode.page',
    'units.page',
  ],
  media: [
    'figures/org.gnome.SystemMonitor.svg',
  ],
)
