figs = figures/addColumn.png \
	figures/memoryMaps.png \
	figures/sortMenu2.png  \
	figures/changePriority.png \
	figures/moreInfo.png \
	figures/sortMenu.png \
	figures/colorPanel.png \
	figures/processListing.png \
	figures/systemMonitor.png  \
	figures/columnContextMenu.png  \
	figures/sortButton.png \
	figures/viewMenu.png
docname = procman
lang = C
omffile = procman-C.omf
sgml_ents = 
include $(top_srcdir)/sgmldocs.make
dist-hook: app-dist-hook

