figs = figures/addColumn.png \
	figures/memoryMaps.png \
	figures/sortMenu2.png  \
	figures/changePriority.png \
	figures/moreInfo.png \
	figures/sortMenu.png \
	figures/colorPanel.png \
	figures/processListing.png \
	figures/systemMonitor.png  \
	figures/columnContextMenu.png  \
	figures/sortButton.png \
	figures/viewMenu.png
docname = gnome-system-monitor
lang = C
omffile = gnome-system-monitor-C.omf
entities = legal.xml
include $(top_srcdir)/xmldocs.make
dist-hook: app-dist-hook

